fixed extra margin issue with forms in webkit browsers

--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,7 @@ input.submit{
 	width: 100%;
 	padding-top: 0.5em;
 	padding-bottom: 0.5em;
+	margin-bottom: -3px;
 	font-family: bebas, "sans-serif";
 	font-size: 1.5em;
 	font-weight: normal;
@@ -260,6 +261,7 @@ input.submit{
 	border-bottom-right-radius: 0.25em;
 	color: #0f3845;
 	background-color: #2a88a5;
+	transition: color 0.5s;
 	-webkit-transition: color 0.5s;
 	-moz-transition: color 0.5s;
 }
@@ -279,6 +281,7 @@ textarea{
 	display: inline-block;
 	margin-left: 3.125em;
 }
+
 /*********************/
 /******HOME***********/
 /*********************/
